--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 <p>Plv, a Programming language version check tools</p>
 
-<pre><code>$ wget https://isam.github.io/plv/plv.phar
+<pre><code>$ wget http://isam.github.io/plv/plv.phar
 $ chmod +x plv.phar
 $ ./plv.phar check
 </code></pre>
