アカウント名変更の対応

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
       <div id="main" role="main">
         <div class="download-bar">
         <div class="inner">
-          <a href="https://github.com/isam/plv/tarball/master" class="download-button tar"><span>Download</span></a>
-          <a href="https://github.com/isam/plv/zipball/master" class="download-button zip"><span>Download</span></a>
-          <a href="https://github.com/isam/plv" class="code">View Plv on GitHub</a>
+          <a href="https://github.com/nagodon/plv/tarball/master" class="download-button tar"><span>Download</span></a>
+          <a href="https://github.com/nagodon/plv/zipball/master" class="download-button zip"><span>Download</span></a>
+          <a href="https://github.com/nagodon/plv" class="code">View Plv on GitHub</a>
         </div>
         <span class="blc"></span><span class="trc"></span>
         </div>
@@ -41,7 +41,7 @@
 
 <p>Plv, a Programming language version check tools</p>
 
-<pre><code>$ curl -LO http://isam.github.io/plv/plv.phar
+<pre><code>$ curl -LO http://nagodon.github.io/plv/plv.phar
 $ chmod +x plv.phar
 $ ./plv.phar check
 </code></pre>
@@ -50,7 +50,7 @@ $ ./plv.phar check
     </div>
     <footer>
       <div class="owner">
-      <p><a href="https://github.com/isam" class="avatar"><img src="https://1.gravatar.com/avatar/16483f92af3fff2a97b9e5835a1bafd6?d=https%3A%2F%2Fidenticons.github.com%2F918696cbc5ccff376b473656c2754ee1.png&amp;r=x&amp;s=60" width="48" height="48"/></a> <a href="https://github.com/isam">isam</a> maintains <a href="https://github.com/isam/plv">Plv</a></p>
+      <p><a href="https://github.com/nagodon" class="avatar"><img src="https://1.gravatar.com/avatar/16483f92af3fff2a97b9e5835a1bafd6?d=https%3A%2F%2Fidenticons.github.com%2F918696cbc5ccff376b473656c2754ee1.png&amp;r=x&amp;s=60" width="48" height="48"/></a> <a href="https://github.com/nagodon">nagodon</a> maintains <a href="https://github.com/nagodon/plv">Plv</a></p>
 
 
       </div>
@@ -61,7 +61,7 @@ $ ./plv.phar check
   </div>
   <div class="current-section">
     <a href="#top">Scroll to top</a>
-    <a href="https://github.com/isam/plv/tarball/master" class="tar">tar</a><a href="https://github.com/isam/plv/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
+    <a href="https://github.com/nagodon/plv/tarball/master" class="tar">tar</a><a href="https://github.com/nagodon/plv/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
     <p class="name"></p>
   </div>
 
