--- a/index.html
+++ b/index.html
@@ -64,6 +64,14 @@ $ ./plv.phar check
     <a href="https://github.com/nagodon/plv/tarball/master" class="tar">tar</a><a href="https://github.com/nagodon/plv/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
     <p class="name"></p>
   </div>
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
+    ga('create', 'UA-46012609-2', 'nagodon.github.io');
+    ga('send', 'pageview');
+  </script>
 </body>
 </html>
