pythonとscalaのバージョンが乱れていたので修正

--- a/tests/Fixtures/scala.html
+++ b/tests/Fixtures/scala.html
@@ -75,7 +75,7 @@
   <div class="bigcircle" style="float: left;">1</div>
   <div class="bigcircle-content" style="float: left;">
     <p class="center">
-      Download Scala 2.10.3 binaries for your system
+      Download Scala 2.11.0 binaries for your system
       (<a href="./all.html">All downloads</a>).
     </p>
 
@@ -83,7 +83,7 @@
       <a id="download-button" style="margin-top: 12px;">
         <span class="slider">Download</span>
         <span class="icon"></span>
-        <span class="version">Scala 2.10.3</span>
+        <span class="version">Scala 2.11.0</span>
       </a>
     </div>
     <p class="install"><a href="/download/install.html">Need help installing?</a></p>
@@ -96,10 +96,18 @@
   <div class="bigcircle" style="float: right;">2</div>
   <div class="bigcircle-content" style="float: right; margin-top: 32px;">
     <p class="center" style="text-align: right;">
-      <a href="http://typesafe.com/activator"><b>Get started with Typesafe Activator</b></a>
+      <b><a href="http://www.typesafe.com/platform/getstarted">Get started with Typesafe Activator</a></b>
       <br/>
       Typesafe Activator is a browser-based or command-line<br/>
       tool that helps developers get started with Scala.
+      <div class="download-wrapper">
+        <a id="download-button" class="activator" style="margin-top: 12px; margin-right: 24px; width: 200px;" href="http://downloads.typesafe.com/typesafe-activator/1.1.1/typesafe-activator-1.1.1.zip">
+          <span class="slider">Download</span>
+          <span class="activator icon"></span>
+          <span class="version-long">&nbsp;Typesafe Activator</span>
+        </a>
+        <p class="install"><a style="margin-left: 124px;" href="http://www.typesafe.com/platform/getstarted">Need help installing?</a></p>
+      </div>
     </p>
   </div>
 </div>
@@ -131,7 +139,7 @@ This Scala software distribution can be installed on any Unix-like or Windows sy
 
 
 <div>
-You can find the installer download links for other operating systems, as well as documentation and source code archives for Scala 2.10.3 below.
+You can find the installer download links for other operating systems, as well as documentation and source code archives for Scala 2.11.0 below.
 </div>
 
 <br/>
@@ -150,25 +158,25 @@ You can find the installer download links for other operating systems, as well a
 
 <tr>
   <td>
-    <a id="#link-main-unixsys" href="/files/archive/scala-2.10.3.tgz">
-      scala-2.10.3.tgz
+    <a id="#link-main-unixsys" href="http://downloads.typesafe.com/scala/2.11.0/scala-2.11.0.tgz">
+      scala-2.11.0.tgz
     </a>
   </td>
   <td>Max OS X, Unix, Cygwin</td>
   
-  <td>20 MB</td>
+  <td>24.80M</td>
   
 </tr>
 
 <tr>
   <td>
-    <a id="#link-main-windows" href="/files/archive/scala-2.10.3.msi">
-      scala-2.10.3.msi
+    <a id="#link-main-windows" href="http://downloads.typesafe.com/scala/2.11.0/scala-2.11.0.msi">
+      scala-2.11.0.msi
     </a>
   </td>
   <td>Windows (msi installer)</td>
   
-  <td>60 MB</td>
+  <td>89.00M</td>
   
 </tr>
 
@@ -217,9 +225,11 @@ Note that the different major releases of Scala (e.g. Scala 2.9.3 and Scala 2.10
 
 <ul>
   
-  <li><a href="/download/2.9.3.html">Current maintenance release - Scala 2.9.3</a></li>
+  <li><a href="/download/2.9.3.html">Current 2.9.x maintenance release - Scala 2.9.3</a></li>
   
-  <li><a href="/download/2.11.0-M7.html">Current development release - Scala 2.11.0-M7</a></li>
+  <li><a href="/download/2.10.4.html">Current 2.10.x maintenance release - Scala 2.10.4</a></li>
+  
+  <li><a href="/download/2.11.0.html">Current 2.11.x release - Scala 2.11.0</a></li>
   
   <li><a href="/files/archive/nightly/">Nightly builds</a></li>
   <li><a href="changelog.html">Changelog</a></li>
@@ -230,7 +240,7 @@ Note that the different major releases of Scala (e.g. Scala 2.9.3 and Scala 2.10
 The Scala distribution is released under the <a href="/license.html">3-clause BSD license</a>.
 
 
-<!-- This page should be auto-generated - it is the main download page of the latest stable release -->
+
 
 
 <div id="getting-started-popup">
@@ -273,7 +283,7 @@ The Scala distribution is released under the <a href="/license.html">3-clause BS
     <ul>
       <li><h5>Download</h5></li>
         <li><a href="/download/">Stable Release</a></li>
-        <li><a href="/download/2.11.0-M7.html">Development Release</a></li>
+        <li><a href="/download/2.11.0".html">Development Release</a></li>
     </ul>
     <ul>
       <li><h5>Community</h5></li>
